--- a/css/main1.css
+++ b/css/main1.css
@@ -1,7 +1,7 @@
 body{
 	background-color: black;
 	background-image: url(../img/darkwood.png);
-	color: white;
+	color: red;
 	text-align: center;
 }
 .navbar{
