--- a/css/main1.css
+++ b/css/main1.css
@@ -26,6 +26,11 @@ a:hover {
 a:active {
     text-decoration: underline;
 }
+.post{
+	background-color: white;
+	border: 2px solid red;
+	padding: 10px;
+}
 #header{
 	width: 100%;
 	background-color: white;
