--- a/css/main1.css
+++ b/css/main1.css
@@ -1,9 +1,23 @@
 body{
 	background-color: black;
 	background-image: url(../img/darkwood.png);
+	background: url(../img/darkwood.png) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: 100%;
 	color: red;
 	text-align: left;
+	position: relative;
 
+}
+.background{
+	background-image: url(../img/darkwood.png);
+	background: url(../img/darkwood.png) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: 100%;
 }
 ul{
 	list-style-type: none;
@@ -26,16 +40,29 @@ a:hover {
 a:active {
     text-decoration: underline;
 }
+.link{
+	text-align: center;
+	background-image: url(../img/darkwood.png);
+	background: url(../img/darkwood.png) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: 100%;
+
+}
 .post{
 	background-color: white;
 	border: 2px solid red;
 	padding: 10px;
+	text-align: center;
+	word-wrap: break-word;
+	margin-bottom: 10px;
 }
 #header{
 	width: 100%;
 	background-color: white;
 	height: 50px;
-	padding-top: 25px;
+	padding-top: 5px;
 	text-align: left; 
 	padding-left: 7px;
 	margin-bottom: 50px;
@@ -65,7 +92,8 @@ a:active {
 .link{
 	background-color: lime;
 	padding-left: 13px;
-	width: 33%;
+	margin-left: 7px;
+	width: 24%;
 	display: inline-block;
 }
 .webpage{
