--- a/css/main1.css
+++ b/css/main1.css
@@ -6,7 +6,7 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: 100%;
-	color: red;
+	color: white;
 	text-align: left;
 	position: relative;
 
@@ -51,8 +51,8 @@ a:active {
 
 }
 .post{
-	background-color: white;
-	border: 2px solid red;
+	background-color: black;
+	border: 2px solid white;
 	padding: 10px;
 	text-align: center;
 	word-wrap: break-word;
