--- a/css/main1.css
+++ b/css/main1.css
@@ -1,7 +1,7 @@
 body{
 	background-color: black;
-	background-image: url(../img/darkwood.png);
-	background: url(../img/darkwood.png) no-repeat center center fixed; 
+	background-image: url(../img/fall.jpg);
+	background: url(../img/fall.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -12,8 +12,8 @@ body{
 
 }
 .background{
-	background-image: url(../img/darkwood.png);
-	background: url(../img/darkwood.png) no-repeat center center fixed; 
+	background-image: url(../img/fall.jpg);
+	background: url(../img/fall.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -131,6 +131,12 @@ a:active {
 @media (max-width: 1024px) {
 	body {
 		background-color: blue;
+		background-image: url(../img/fall.jpg);
+		background: url(../img/fall.jpg) no-repeat center center fixed; 
+		-webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    -o-background-size: cover;
+	    background-size: 100%;
 		text-align: center;
 	}
 }
