--- a/css/main1.css
+++ b/css/main1.css
@@ -58,16 +58,22 @@ a:active {
 	background-color: white;
 	padding: 10px;
 	height: 400px;
+	background: rgba(200, 80, 0, 0.4); 
+	color: white;
 }
 #login{
 	background-color: white;
 	padding: 10px;
 	height: 400px;
+	background: rgba(200, 80, 0, 0.4); 
+	color: white;
 }
 #form{
 	background-color: white;
 	padding: 10px;
 	height: 400px;
+	background: rgba(200, 80, 0, 0.4); 
+	color: white;
 }
 #header{
 	width: 100%;
