--- a/css/main1.css
+++ b/css/main1.css
@@ -54,26 +54,25 @@ a:active {
 	margin-bottom: 10px;
 	background: rgba(200, 80, 0, 0.4); 
 }
+.whitefont{
+	color: white;
+}
 #register{
 	background-color: white;
 	padding: 10px;
 	height: 400px;
 	background: rgba(200, 80, 0, 0.4); 
-	color: white;
 }
 #login{
 	background-color: white;
 	padding: 10px;
 	height: 400px;
-	background: rgba(200, 80, 0, 0.4); 
-	color: white;
-}
+	background: rgba(200, 80, 0, 0.4); }
 #form{
 	background-color: white;
 	padding: 10px;
 	height: 400px;
 	background: rgba(200, 80, 0, 0.4); 
-	color: white;
 }
 #header{
 	width: 100%;
